--- a/app/src/main/res/layout/row_match_history.xml
+++ b/app/src/main/res/layout/row_match_history.xml
@@ -89,6 +89,7 @@
                 android:orientation="horizontal">
 
                 <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/petImage"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:src="@drawable/pets_24px" />
