feat :마이페이지 차단 관리  #135

--- a/app/src/main/res/layout/row_block_user.xml
+++ b/app/src/main/res/layout/row_block_user.xml
@@ -6,6 +6,7 @@
     android:padding="12dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/textViewUserImage"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/add" />
