feat :커뮤니티 게시글 상세페이지 사진 뷰페이저2 연결  #131

--- a/app/src/main/res/layout/fragment_full_screen.xml
+++ b/app/src/main/res/layout/fragment_full_screen.xml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black">
 
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/fullScreenToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme" />
+
     <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/fullScreenImageView"
         android:layout_width="match_parent"
-        android:adjustViewBounds="true"
         android:layout_height="match_parent"
-        android:scaleType="centerInside"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:adjustViewBounds="true"
+        android:clickable="false"
+        android:scaleType="centerInside" />
 
 </RelativeLayout>
