--- a/app/src/main/res/layout/item_community_view_pager2.xml
+++ b/app/src/main/res/layout/item_community_view_pager2.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.github.chrisbanes.photoview.PhotoView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.AppCompatImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:scaleType="centerCrop"
     android:id="@+id/communityViewPager2Image"
     android:adjustViewBounds="true"
     android:layout_height="match_parent">
 
-</com.github.chrisbanes.photoview.PhotoView>
+</androidx.appcompat.widget.AppCompatImageView>
 
