--- a/app/src/main/res/layout/row_community.xml
+++ b/app/src/main/res/layout/row_community.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/communityProfileConstraintLayout"
@@ -20,18 +20,17 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="@dimen/common_padding"
-            android:layout_marginEnd="@dimen/common_padding"
+            android:layout_marginTop="10dp"
             android:background="@android:color/transparent"
             android:src="@mipmap/ic_launcher"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/communityPostCategoryCard" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/communityPostTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/common_small_margin"
+            android:layout_marginStart="10dp"
             android:maxLength="17"
             android:text="제목"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
@@ -43,6 +42,7 @@
             android:id="@+id/communityUserNickName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:text="닉네임"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/black"
@@ -54,6 +54,7 @@
             android:id="@+id/placeDateDistinction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:paddingStart="@dimen/common_small_padding"
             android:paddingEnd="@dimen/common_small_padding"
             android:text="@string/place_date_distinction"
@@ -65,6 +66,7 @@
             android:id="@+id/communityPostDateCreated"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:text="30분전"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             app:layout_constraintStart_toEndOf="@id/placeDateDistinction"
@@ -72,24 +74,25 @@
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/communityPostCategoryCard"
+            style="@style/Widget.Material3.CardView.Filled"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/common_margin"
+            android:layout_marginBottom="6dp"
             android:elevation="0dp"
-            app:cardCornerRadius="3dp"
-            app:strokeColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="@id/communityProfileImage"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/communityProfileImage">
+            app:cardBackgroundColor="?attr/colorSurfaceVariant"
+            app:cardCornerRadius="6dp"
+            app:contentPadding="2dp"
+            app:layout_constraintBottom_toTopOf="@id/communityProfileImage"
+            app:layout_constraintStart_toStartOf="@+id/communityProfileImage">
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <TextView
                 android:id="@+id/communityPostCategoryTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:paddingStart="@dimen/common_small_padding"
                 android:paddingEnd="@dimen/common_small_padding"
-                android:textColor="@color/black"
+                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                 tools:text="일상" />
         </com.google.android.material.card.MaterialCardView>
 
@@ -111,8 +114,8 @@
             android:id="@+id/communityPostImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
             android:adjustViewBounds="true"
+            android:layout_gravity="center"
             android:scaleType="centerCrop"
             app:srcCompat="@mipmap/ic_launcher" />
     </com.google.android.material.card.MaterialCardView>
@@ -123,8 +126,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/common_margin"
-        android:layout_marginTop="@dimen/common_margin"
         android:layout_marginEnd="@dimen/common_margin"
+        android:layout_marginTop="@dimen/common_margin"
         android:ellipsize="end"
         android:maxLines="4"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -171,11 +174,11 @@
                 android:id="@+id/communityFavoriteCounter"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/common_small_margin"
-                android:gravity="center"
                 android:text="0"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+                android:gravity="center"
                 android:textStyle="bold"
+                android:layout_marginStart="@dimen/common_small_margin"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                 app:layout_constraintBottom_toBottomOf="@id/communityFavoriteTextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/communityFavoriteTextView"
@@ -202,8 +205,8 @@
             android:layout_gravity="center"
             android:layout_marginStart="@dimen/common_small_margin"
             android:text="0"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
 
     </LinearLayout>
 
