산책약속 분기 후 혼자/같이 산책 -> 리뷰 분기 -> Review /WalkReview 분기 -> walkMate가 준 별점 평균 프로필 표시

--- a/app/src/main/res/layout/fragment_walk_review_write.xml
+++ b/app/src/main/res/layout/fragment_walk_review_write.xml
@@ -21,22 +21,36 @@
             android:theme="?attr/actionBarTheme"
             app:title="산책 리뷰 작성" />
 
-        <TextView
-            android:id="@+id/textViewWalkReviewDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/common_margin"
-            android:gravity="center"
-            android:text="날짜"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+
         <TextView
             android:id="@+id/textViewWalkReviewUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/common_margin"
             android:gravity="center"
-            android:text="ㅇㅇㅇ 와의 산책"
+            android:text="ㅇㅇㅇ님과의 산책은 어떠셨나요?"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+        <RatingBar
+            android:id="@+id/userRatingBar"
+            style="@android:style/Widget.DeviceDefault.Light.RatingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/common_margin"
+            android:numStars="5"
+            android:rating="4" />
+
+        <TextView
+            android:id="@+id/textViewWalkReviewUser1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/common_margin"
+            android:gravity="center"
+            android:text="남긴 평점은 상대방의 발바닥 점수에 반영됩니다"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+
 
 
         <ImageView
@@ -46,7 +60,8 @@
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/common_margin"
             android:src="@drawable/photo"
-            tools:src="@drawable/photo" />
+            tools:src="@drawable/photo"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/textViewWalkReviewAnnouncement2"
@@ -81,7 +96,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/common_margin"
-            android:text="리뷰 작성 완료" />
+            android:text="후기 보내기" />
 
 
     </LinearLayout>
