--- a/app/src/main/res/layout/fragment_walk.xml
+++ b/app/src/main/res/layout/fragment_walk.xml
@@ -214,7 +214,9 @@
         android:layout_width="400dp"
         android:layout_height="match_parent"
         android:layout_gravity="end"
-        android:padding="@dimen/common_padding"
+        android:paddingLeft="32dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="16dp"
         android:orientation="vertical">
 
 
