--- a/app/src/main/res/layout/row_community_comment.xml
+++ b/app/src/main/res/layout/row_community_comment.xml
@@ -16,7 +16,6 @@
         android:layout_marginBottom="@dimen/common_margin"
         android:background="@android:color/transparent"
         android:scaleType="centerCrop"
-        android:src="@drawable/a11"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -119,7 +118,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/communityCommentCommentTextView"
+            android:id="@+id/communityCommentReplyTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -127,7 +126,7 @@
             android:drawableStart="@drawable/comment"
             android:drawablePadding="@dimen/common_small_padding"
             android:gravity="center"
-            android:text="@string/comment"
+            android:text="@string/reply"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
 
 
@@ -151,5 +150,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/communityCommentBottomLinerLayout" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
