마커 관련 수정/ 최근산책 로직 수정

--- a/app/src/main/res/layout/fragment_walk_review_write.xml
+++ b/app/src/main/res/layout/fragment_walk_review_write.xml
@@ -96,7 +96,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/common_margin"
-            android:text="후기 보내기" />
+            android:text="리뷰 작성 완료" />
 
 
     </LinearLayout>
