feat : 채팅 상대와의 차단 상태 실시간 업데이트 및 ui 반영, 채팅방 밖(프로필)에서 차단할 때도 실시간 반영

--- a/app/src/main/res/menu/chat_room_menu.xml
+++ b/app/src/main/res/menu/chat_room_menu.xml
@@ -2,11 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/item_chat_block"
+        android:id="@+id/item_chat_toggle_block"
         android:title="차단하기" />
-    <item
-        android:id="@+id/item_chat_unblock"
-        android:title="차단해제" />
     <item
         android:id="@+id/item_chat_report"
         android:title="신고하기" />
