--- a/app/src/main/res/navigation/chat.xml
+++ b/app/src/main/res/navigation/chat.xml
@@ -11,14 +11,11 @@
         android:label="산책 메이트 요청"
         tools:layout="@layout/fragment_walk_mate_request" >
         <argument
-            android:name="senderId"
-            app:argType="string" />
-        <argument
             android:name="receiverId"
             app:argType="string" />
         <argument
-            android:name="chatRoomId"
-            app:argType="string" />
+            android:name="chatRoom"
+            app:argType="com.petpal.mungmate.model.ChatRoom" />
     </fragment>
     <fragment
         android:id="@+id/chatRoomFragment"
