fix : 산책 요청 수신측 메시지 enabled=false 대신 메시지 자체를 숨기는 방식으로 변경

--- a/app/src/main/res/layout/row_chat_walk_mate_request_send.xml
+++ b/app/src/main/res/layout/row_chat_walk_mate_request_send.xml
@@ -64,8 +64,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_weight="1"
-                android:text="상대가 요청을 수락하면 산책 매칭이 성사됩니다."
-                android:textColor="@color/md_theme_dark_onTertiary" />
+                android:text="★ 상대가 요청을 수락하면 산책 매칭이 성사됩니다."
+                android:textColor="@color/md_theme_dark_secondaryContainer" />
+
         </LinearLayout>
 
     </LinearLayout>
