--- a/app/src/main/res/layout/row_community_comment.xml
+++ b/app/src/main/res/layout/row_community_comment.xml
@@ -129,7 +129,7 @@
             android:drawablePadding="@dimen/common_small_padding"
             android:gravity="center"
             android:text="@string/reply"
-            android:textAppearance="@style/textAppearanceLabelMedium" />
+            android:textAppearance="?attr/textAppearanceLabelMedium" />
 
 
         <androidx.appcompat.widget.AppCompatTextView
