--- a/app/src/main/res/layout/row_community_comment.xml
+++ b/app/src/main/res/layout/row_community_comment.xml
@@ -3,9 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/common_margin"
-    android:layout_marginEnd="@dimen/common_margin">
+    android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/communityCommentProfileImage"
@@ -16,6 +14,7 @@
         android:layout_marginBottom="@dimen/common_margin"
         android:background="@android:color/transparent"
         android:scaleType="centerCrop"
+        android:layout_marginStart="@dimen/common_margin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,6 +23,7 @@
         android:id="@+id/communityCommentMenuImageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/common_margin"
         android:backgroundTint="@android:color/transparent"
         android:src="@drawable/more_vert"
         app:layout_constraintBottom_toBottomOf="@id/communityCommentPostDateCreated"
@@ -39,7 +39,6 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/black"
         android:textStyle="bold"
-
         app:layout_constraintStart_toEndOf="@id/communityCommentProfileImage"
         app:layout_constraintTop_toTopOf="@id/communityCommentProfileImage" />
 
@@ -49,7 +48,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="30분전"
-
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         app:layout_constraintStart_toStartOf="@id/communityCommentUserNickName"
         app:layout_constraintTop_toBottomOf="@id/communityCommentUserNickName" />
@@ -60,6 +58,7 @@
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/common_small_margin"
         android:maxLength="300"
+        android:layout_marginStart="@dimen/common_margin"
         android:text="rrrrrrrrrrrrrrrrrddddddddddddddddddddddddddddddddddddddddddddddddddddrrrrrrrrrrrrrrrrrrrrrrrr"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintEnd_toEndOf="@id/communityCommentMenuImageButton"
@@ -73,6 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/common_margin"
         android:layout_marginEnd="@dimen/common_margin"
+        android:layout_marginStart="@dimen/common_margin"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/communityCommentContent">
@@ -151,5 +151,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/communityCommentBottomLinerLayout" />
 
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/replyRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_marginStart="@dimen/common_small_margin"
+        android:layout_height="wrap_content"
+        android:background="#FBFBFB"
+        app:layout_constraintTop_toBottomOf="@id/communityCommentDivider" />
 </androidx.constraintlayout.widget.ConstraintLayout>
