마커 클릭->차단목록에 추가 수정

--- a/app/src/main/res/layout/row_walk_bottom_sheet_user.xml
+++ b/app/src/main/res/layout/row_walk_bottom_sheet_user.xml
@@ -32,8 +32,7 @@
             android:background="@android:color/transparent"
             android:src="@drawable/account_circle_24px"
             app:civ_border_color="#000000"
-            app:civ_border_overlay="true"
-            app:civ_border_width="5dp" />
+            app:civ_border_overlay="true" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -117,8 +116,7 @@
             android:background="@android:color/transparent"
             android:src="@drawable/pets_24px"
             app:civ_border_color="#000000"
-            app:civ_border_overlay="true"
-            app:civ_border_width="5dp" />
+            app:civ_border_overlay="true" />
 
         <LinearLayout
             android:layout_width="match_parent"
