--- a/app/src/main/res/layout/row_walk_bottom_sheet_place.xml
+++ b/app/src/main/res/layout/row_walk_bottom_sheet_place.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottom_place_layout"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="wrap_content"
     android:background="@drawable/walk_bottom_sheet_background"
-    android:padding="16dp">
+    android:padding="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,20 +16,52 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:gravity="top"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="멍멍 동물병원"
+                android:textAppearance="?attr/textAppearanceTitleLarge"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/imageViewFavoirte"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    app:srcCompat="@drawable/empty_heart" />
+
+                <TextView
+                    android:id="@+id/textViewPlaceFavoriteCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:isScrollContainer="false"
+                    android:text="20" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewratingbar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="start"
-                android:text=""
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+                android:text="4.5"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
             <RatingBar
                 android:id="@+id/placeRatingBar"
@@ -42,84 +74,48 @@
                 android:rating="4.5" />
 
             <TextView
-                android:id="@+id/textViewratingbar"
+                android:id="@+id/textViewPlaceReviewCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_marginStart="4dp"
-                android:gravity="start"
-                android:text="4.5"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
-
-            <ImageView
-                android:id="@+id/imageViewFavoirte"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                app:srcCompat="@drawable/empty_heart" />
+                android:isScrollContainer="false"
+                android:text="(2)" />
 
         </LinearLayout>
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/textViewAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginRight="8dp"
-            android:orientation="horizontal">
+            android:text="부천 부천구 부천로000길 3층 (부천동)" />
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/ImageViewBottomRecommendPlace"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                android:background="@android:color/transparent"
-                android:src="@drawable/storefront_24px"
-                app:civ_border_color="#000000"
-                app:civ_border_overlay="true" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/ImageViewBottomRecommendPlace"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="8dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/storefront_24px"
+            app:civ_border_color="#000000"
+            app:civ_border_overlay="true" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textViewPlaceReviewCount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_weight="1"
-                    android:drawableLeft="@drawable/reviews_24px"
-                    android:drawablePadding="8dp"
-                    android:isScrollContainer="false"
-                    android:text="" />
-
-                <TextView
-                    android:id="@+id/textViewPlaceFavoriteCount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_weight="1"
-                    android:drawableLeft="@drawable/favoirte_24px"
-                    android:drawablePadding="8dp"
-                    android:isScrollContainer="false"
-                    android:text="20명의 유저가 추천합니다" />
-            </LinearLayout>
-        </LinearLayout>
+        <com.google.android.material.divider.MaterialDivider
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp" />
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginRight="8dp">
+            android:layout_marginTop="12dp">
 
-            <RelativeLayout
+            <LinearLayout
                 android:id="@+id/layoutReview"
                 android:layout_width="match_parent"
-                android:layout_height="120dp">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/textViewNoReview"
@@ -127,68 +123,61 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="40dp"
                     android:text="등록된 리뷰가 없습니다."
+                    android:textAlignment="center"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:visibility="gone" />
 
                 <RatingBar
                     android:id="@+id/placeUserRatingBar1"
-                    style="@style/Widget.AppCompat.RatingBar.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:numStars="5"
                     android:rating="4.5"
+                    style="?android:attr/ratingBarStyleSmall"
                     android:visibility="visible" />
 
                 <TextView
                     android:id="@+id/placeUserReview1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:visibility="visible"
-                    android:layout_below="@+id/placeUserRatingBar1" />
+                    android:visibility="visible" />
 
                 <RatingBar
                     android:id="@+id/placeUserRatingBar2"
-                    style="@style/Widget.AppCompat.RatingBar.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
                     android:numStars="5"
                     android:rating="1"
-                    android:visibility="visible"
-                    android:layout_below="@+id/placeUserReview1" />
+                    style="?android:attr/ratingBarStyleSmall"
+                    android:visibility="visible" />
 
                 <TextView
                     android:id="@+id/placeUserReview2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:visibility="visible"
-                    android:layout_below="@+id/placeUserRatingBar2" />
-
-                <Space
-                    android:id="@+id/spacer"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_below="@+id/placeUserReview2"
-                    android:layout_above="@+id/buttonSubmitReview" />
+                    android:visibility="visible" />
 
                 <Button
                     android:id="@+id/buttonSubmitReview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
+                    android:layout_marginTop="12dp"
                     android:text="리뷰 등록하기" />
 
-            </RelativeLayout>
+            </LinearLayout>
 
-            <com.google.android.material.chip.Chip
+            <TextView
                 android:id="@+id/chipViewAllReviews"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end|top"
-                android:padding="4dp"
+                android:clickable="true"
+                android:focusable="true"
                 android:text="전체 리뷰 보기"
-                android:textSize="12sp" />
+                android:textColor="@color/md_theme_light_primary"
+                android:textSize="12sp"
+                android:textStyle="bold" />
         </FrameLayout>
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
