--- a/app/src/main/res/layout/fragment_place_review.xml
+++ b/app/src/main/res/layout/fragment_place_review.xml
@@ -3,110 +3,136 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="8dp"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:orientation="vertical">
 
-
-    <ImageView
-        android:id="@+id/textViewPlaceImage"
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbarPlaceReview"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        app:srcCompat="@drawable/photo" />
+        android:layout_height="wrap_content"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:navigationIcon="@drawable/arrow_back_24px" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingStart="16dp"
+        android:paddingTop="6dp"
+        android:paddingEnd="16dp">
 
-        <TextView
-            android:id="@+id/textViewPlaceReviewTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/textViewPlaceImage"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
-            android:text="부천 동물병원"
-            android:textSize="25sp"
-            android:textStyle="bold" />
+            app:srcCompat="@drawable/photo" />
 
-        <TextView
-            android:id="@+id/textView21"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:text="동물병원"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewPlaceReviewTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="부천 동물병원"
+                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textView21"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:text="동물병원"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+
+        </LinearLayout>
 
         <RatingBar
             android:id="@+id/placeUserRatingBar1"
-            style="@android:style/Widget.DeviceDefault.RatingBar.Indicator"
+            style="@android:style/Widget.DeviceDefault.RatingBar.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="@dimen/bottom_navigation_icon_size"
-            android:layout_marginRight="8dp"
+            android:layout_marginTop="4dp"
             android:numStars="5"
             android:rating="4.5" />
 
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+            <TextView
+                android:id="@+id/textView22"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/location_on_24px"
+                android:drawablePadding="4dp"
+                android:gravity="center_vertical"
+                android:text="부천 부천구 부천로 000길 00 3층(부천동)" />
+
+            <TextView
+                android:id="@+id/textView23"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:drawableStart="@drawable/pace_24px"
+                android:drawablePadding="4dp"
+                android:gravity="center_vertical"
+                android:text="영업 종료"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textView24"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="28dp"
+                android:text="매일 9:00~18:00" />
+
+            <TextView
+                android:id="@+id/textView25"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:drawableStart="@drawable/call_24px"
+                android:drawablePadding="4dp"
+                android:gravity="center_vertical"
+                android:text="000-000-0000" />
+
+            <TextView
+                android:id="@+id/noReviewsTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="16dp"
+                android:text="작성된 리뷰가 없습니다"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:visibility="gone" />
+
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/textView22"
-            android:layout_width="wrap_content"
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:drawableStart="@drawable/location_on_24px"
-            android:text="부천 부천구 부천로 000길 00 3층(부천동)" />
-
-        <TextView
-            android:id="@+id/textView23"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:drawableStart="@drawable/pace_24px"
-            android:text="영업 종료"
+            android:layout_marginTop="12dp"
+            android:text="리뷰"
+            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/textView24"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/reviewsRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:layout_weight="1"
-            android:text="매일 9:00~18:00" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/textView25"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:drawableStart="@drawable/call_24px"
-            android:text="000-000-0000" />
-
-        <TextView
-            android:id="@+id/noReviewsTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="16dp"
-            android:text="작성된 리뷰가 없습니다"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:visibility="gone" />
-
+        </androidx.recyclerview.widget.RecyclerView>
     </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/reviewsRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
