--- a/app/src/main/res/layout/row_place_review.xml
+++ b/app/src/main/res/layout/row_place_review.xml
@@ -4,13 +4,18 @@
     style="@style/Widget.Material3.CardView.Elevated"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_marginStart="4dp"
+    android:layout_marginTop="2dp"
+    android:layout_marginEnd="4dp"
+    android:layout_marginBottom="8dp"
+    android:clipToPadding="false"
+    android:orientation="vertical"
+    app:contentPadding="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,8 +35,8 @@
                 android:id="@+id/textViewPlaceReviewDetailUserName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="구매자ID"
                 android:layout_marginLeft="8dp"
+                android:text="구매자ID"
                 android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                 android:textStyle="bold" />
 
@@ -47,15 +52,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_gravity="right">
+            android:layout_gravity="right"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginTop="8dp"
+                android:layout_weight="1"
                 android:text="굉장히 좋습니다! 의사선생님이 친절하셔요" />
 
             <ImageView
