fix : 산책 메이트 요청 거절시 Match 데이터 삭제 / 채팅 목록 테스트 레이아웃 숨김 처리

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.chat.ChatFragment" >
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbarPlaceReview"
+        android:id="@+id/toolbarChat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
@@ -61,7 +61,8 @@
         android:id="@+id/chatTestLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <EditText
             android:id="@+id/editTextReceiverId"
