feat: 반려견 recyclerview로 보여주기
- 정렬은 아직..

--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -124,8 +124,10 @@
                             </LinearLayout>
 
                             <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/recyclerViewMyPet"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
+                                android:layout_marginStart="12dp"
                                 android:orientation="horizontal"
                                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                         </LinearLayout>
